parladata/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parladata-deployment
  labels:
    app: parladata
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parladata
  template:
    metadata:
      labels:
        app: parladata
    spec:
      volumes:
        - name: parladata-shared-storage
          emptyDir: {}
      containers:
        - name: parladata
          image: parladata-hrvaska
          volumeMounts:
            - name: parladata-shared-storage
              mountPath: /pvc
          command:
            - gunicorn
            - parladata_project.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 300m
            limits:
              memory: 400Mi
              cpu: 600m
        - name: parladata-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: parladata-shared-storage
              mountPath: /usr/share/nginx/html
