parladata/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parladata-ua
spec:
  selector:
    app: parladata-ua
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: parladata-ua-nginx
spec:
  selector:
    app: parladata-ua
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
